--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,6 +1,11 @@
-$background-color-primary: #2a2a2a;
-$background-color-secondary: #3b3b3b;
-$background-color-active: #828282;
-$color: #fff;
-
+$color-darkgray-1: #2a2a2a;
+$color-darkgray-2: #3b3b3b;
+$color-darkgray-3: #2b2b2b;
+$color-darkgray-4: #3c3c3c;
+$color-lightgray-1: #828282;
+$color-lightgray-2: rgba(43, 43, 43, 0.6);
+$color-lightgray-3: #bdbdbd;
+$color-lightgray-4: #828282;
+$color-blue: #2d9cdb;
+$color-white: #fff;
 $app-bar-size: 90px;
