--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 @import "./theme.scss";
 
 .app {
-  background-color: $background-color-primary;
+  background-color: $color-darkgray-1;
   height: 100vh;
   margin-left: $app-bar-size;
+  font-family: Roboto;
 }
 
 @media screen and (max-width: 800px) {
