--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -1,7 +1,7 @@
 @import "../../theme.scss";
 
 .app-bar {
-  background-color: $background-color-secondary;
+  background-color: $color-darkgray-2;
 
   position: absolute;
   left: 0;
@@ -20,7 +20,7 @@
   }
 
   &__navigation-icon {
-    fill: $background-color-secondary;
+    fill: $color-darkgray-2;
 
     padding: 24px;
     border-radius: 10px;
@@ -28,8 +28,8 @@
     height: 22px;
 
     &--active {
-      fill: $background-color-active;
-      background-color: $background-color-active;
+      fill: $color-lightgray-1;
+      background-color: $color-lightgray-1;
     }
   }
 }
