--- a/src/components/ImageDetails/ImageDetails.scss
+++ b/src/components/ImageDetails/ImageDetails.scss
@@ -11,6 +11,12 @@
   align-items: center;
   justify-content: center;
   color: $color-white;
+  opacity: 0.3;
+  transition: all 500ms ease-in-out;
+
+  &--visible {
+    opacity: 1;
+  }
 
   background-color: $color-lightgray-2;
 
